<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".product_activity.AddProductActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
        app:title="Add Product" />

    <LinearLayout
        android:id="@+id/llUploadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUploadImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_upload_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etProducrName"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/product_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etProducrBrand"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/product_brand"
                android:inputType="text" />

            <EditText
                android:id="@+id/etProducrPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:digits="0123456789"
                android:hint="@string/product_price"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llUploadLayout"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/more_image" />

        <Spinner
            android:id="@+id/spImageCount"
            android:layout_width="100dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAdd"
        android:layout_below="@+id/llImageLayout"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/llImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/add_product"
        android:textColor="@android:color/white" />


</RelativeLayout>